changed title according to lesson i.e. branch

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>git one</title>
-    <h1>My second commit</h1>
+    <title>Branch</title>
+    <h1>Practice branch</h1>
   </head>
   <body>
 
